Victoria, react components and vue components integrados a Astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,13 @@
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import ExampleBlock from '@/components/blocks/ExampleBlock';
-
+import CounterVue from '@/components/CounterVue.vue';
+import CounterReact from '@/components/CounterReact.jsx';
+ 
 ---
 <Layout>
 	<ExampleBlock />
+	<CounterVue client:load/>
+	<CounterReact client:load/>
 	<Welcome />
 </Layout>
