--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -1,7 +1,7 @@
 ---
-import getPages from '@/hooks/getAllPages'
 import Welcome from '../components/Welcome.astro';
 import Layout from '@/layouts/Layout.astro'
+import getPages from '@/hooks/getAllPages'
 import Slugify from '@/utils/Slugify';
 
 export async function getStaticPaths (){
@@ -15,6 +15,6 @@ export async function getStaticPaths (){
 const { page } = Astro.params;
 ---
 <Layout>
-  <h1>You are on page: {page}</h1>
+  <h1>You are on page {page}</h1>
   <Welcome />
 </Layout>
