Innecesary components erased, modularized example components and fallback of fetching CMS logic added

--- a/src/components/ui/UiNavBar/UiNavBar.astro
+++ b/src/components/ui/UiNavBar/UiNavBar.astro
@@ -1,5 +1,5 @@
 ---
-import getPages from '@/hooks/getAllPages'
+import getPages from '@/hooks/getAllPages';
 import Slugify from '@/utils/Slugify';
 const { pages } = await getPages();
 ---
