Soporte para warnings en run build y dep installed

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,6 @@
 ---
-import Layout from '@/layouts/Layout.astro'
-import ExampleBlock from '@/components/blocks/ExampleBlock';
+import Layout from '@/layouts/Layout.astro';
 ---
 <Layout>
     <h1>404 - Page Not Found</h1>
-    <ExampleBlock />
 </Layout>
