--- a/src/components/ui/Footer/Footer.astro
+++ b/src/components/ui/Footer/Footer.astro
@@ -5,11 +5,11 @@ const { pages } = await getPages();
 
 //Aca se iteran todas las paginas creadas en el CMS como links para el NavBar
 ---
-<section class="w-full max-w-screen-layout bg-slate-400 p-5">
+<section class="w-full max-w-screen-layout bg-slate-200 p-5">
     <div class="w-full flex flex-row justify-around">
     {pages.map((page: PageType) => {
         return (
-    <a href={`/${page.slug === 'landing' ? '' : page.slug}`}>{page.name}</a>
+    <a href={`/${page.slug === 'home' ? '' : page.slug}`}>{page.name}</a>
     )
     })}
     </div>
