--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
-import UiNavBar from "@/components/ui/UiNavBar"
+import Footer from "@/components/ui/Footer";
+import Navbar from "@/components/ui/Navbar";
+import ChakraProvider from '@/providers/ChakraProvider';
 ---
 <!doctype html>
 <html lang="en">
@@ -10,17 +12,11 @@ import UiNavBar from "@/components/ui/UiNavBar"
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body class="flex flex-col items-center">
-		<UiNavBar />
+	<body class="flex flex-col items-center justify-between h-screen w-screen">
+		<ChakraProvider client:load>
+		<Navbar />
 		<slot />
+		<Footer />
+	</ChakraProvider>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
