--- a/src/components/molecules/Footer/Footer.astro
+++ b/src/components/molecules/Footer/Footer.astro
@@ -5,7 +5,7 @@ const { pages } = await getPages();
 
 //Aca se iteran todas las paginas creadas en el CMS como links para el NavBar
 ---
-<section class="w-full max-w-screen-layout bg-slate-200 p-5">
+<section class="w-full bg-slate-300 p-5">
     <div class="w-full flex flex-row justify-around">
     {pages.map((page: PageType) => {
         return (
