--- a/src/components/molecules/Navbar/Navbar.astro
+++ b/src/components/molecules/Navbar/Navbar.astro
@@ -1,4 +1,5 @@
 ---
+import Button from '@/components/atoms/Button/Button';
 import getPages from '@/hooks/getAllPages';
 import { type PageType } from '@/types/pages';
 const { pages } = await getPages();
@@ -9,7 +10,9 @@ const { pages } = await getPages();
     <div class="w-full flex flex-row justify-around">
     {pages.map((page: PageType) => {
         return (
+            <Button variant='morning_green'>
     <a href={`/${page.slug === 'home' ? '' : page.slug}`}>{page.name}</a>
+</Button>
     )
     })}
     </div>
