--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Footer from "@/components/molecules/Footer";
 import Navbar from "@/components/molecules/Navbar";
 import "@/styles/global.css";
+import "@fontsource/kanit";
 import { Container } from "@mui/material";
 ---
 <!doctype html>
@@ -14,7 +15,7 @@ import { Container } from "@mui/material";
 		<title>ExampleProject</title>
 	</head>
 	<body>
-		<Container className="h-[100vh] flex flex-col justify-between px-0">
+		<Container className="h-[100vh] flex flex-col justify-between px-0 font-main">
 			<Navbar />
 			<slot />
 			<Footer />
