Some styles to NavBar and DarkMode working

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import { Container } from "@mui/material";
 		<meta name="generator" content={Astro.generator} />
 		<title>ExampleProject</title>
 	</head>
-	<body>
+	<body class="dark:bg-black">
 		<Container className="h-[100vh] flex flex-col justify-between px-0 font-main">
 			<Navbar />
 			<slot />
