--- a/src/components/molecules/Navbar/Navbar.astro
+++ b/src/components/molecules/Navbar/Navbar.astro
@@ -1,19 +1,36 @@
 ---
 import Button from '@/components/atoms/Button/Button';
+import ToggleTheme from '@/components/molecules/ToggleTheme';
 import getPages from '@/hooks/getAllPages';
 import { type PageType } from '@/types/pages';
 const { pages } = await getPages();
 
 //Aca se iteran todas las paginas creadas en el CMS como links para el NavBar
 ---
-<section class="w-full bg-slate-300 p-5">
-    <div class="w-full flex flex-row justify-around">
+<section class="w-full bg-white dark:bg-black/45 backdrop-blur py-4 rounded-b-[30px] shadow-lg">
+    <div class="w-full flex flex-row justify-between px-5">
     {pages.map((page: PageType) => {
         return (
-            <Button variant='morning_green'>
+            <Button variant='link'>
     <a href={`/${page.slug === 'home' ? '' : page.slug}`}>{page.name}</a>
 </Button>
     )
     })}
+    <ToggleTheme client:load/>
     </div>
 </section>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const btn = document.getElementById("toggle-theme");
+      const html = document.documentElement;
+  
+      // Aplicar tema guardado si existe
+      if (localStorage.getItem("theme") === "dark") {
+        html.classList.add("dark");
+      }
+      btn?.addEventListener("click", () => {
+        const isDark = html.classList.toggle("dark");
+        localStorage.setItem("theme", isDark ? "dark" : "light");
+      });
+    });
+  </script>
