--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ import { Container } from "@mui/material";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>ExampleProject</title>
+		<title>Carwash Template</title>
 	</head>
 	<body class="dark:bg-black">
 		<Container className="h-[100vh] flex flex-col justify-between px-0 font-main">
