--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -16,5 +16,5 @@ export async function getStaticPaths (){
 const { page } = Astro.params;
 ---
 <Layout>
-            <h1>You are on page {page}</h1>
+            <h1 class="dark:text-white">You are on page {page}</h1>
 </Layout>
