--- a/src/components/molecules/Navbar/Navbar.astro
+++ b/src/components/molecules/Navbar/Navbar.astro
@@ -1,36 +1,66 @@
 ---
-import Button from '@/components/atoms/Button/Button';
-import ToggleTheme from '@/components/molecules/ToggleTheme';
-import getPages from '@/hooks/getAllPages';
-import { type PageType } from '@/types/pages';
+import Button from "@/components/atoms/Button/Button";
+import ToggleTheme from "@/components/molecules/ToggleTheme";
+import getPages from "@/hooks/getAllPages";
+import { type PageType } from "@/types/pages";
+import Typography from "@/components/atoms/Typography";
+import DinamicIcon from "@/components/atoms/DinamicIcon";
 const { pages } = await getPages();
 
 //Aca se iteran todas las paginas creadas en el CMS como links para el NavBar
 ---
-<section class="w-full bg-white dark:bg-black/45 backdrop-blur py-4 rounded-b-[30px] shadow-lg">
-    <div class="w-full flex flex-row justify-between px-5">
-    {pages.map((page: PageType) => {
-        return (
-            <Button variant='link'>
-    <a href={`/${page.slug === 'home' ? '' : page.slug}`}>{page.name}</a>
-</Button>
+
+<section
+  class="self-center w-[90%] xl:w-full bg-white dark:bg-black/45 backdrop-blur py-4 rounded-b-[30px] shadow-lg dark:shadow-[0_1px_35px_5px_rgba(115,236,140,0.7)]"
+>
+  {
+    pages.length > 0 ? (
+      <div class="w-full flex flex-row justify-between px-5">
+        {pages.map((page: PageType) => {
+          return (
+            <a href={`/${page.slug === "home" ? "" : page.slug}`}>
+              <Button
+                variant="link"
+                className="dark:text-white dark:hover:text-light-200 gap-2"
+                client:load
+              >
+                <DinamicIcon
+                  iconname={page.phosphorIcon}
+                  className="size-5"
+                  weight="bold"
+                />
+                {page.name}
+              </Button>
+            </a>
+          );
+        })}
+        <ToggleTheme client:load />
+      </div>
+    ) : (
+      <div class="relative flex py-2">
+        <Typography className="w-full text-center self-center">
+          No pages found
+        </Typography>
+        <ToggleTheme
+          className="absolute right-4 top-4 -translate-y-1/2"
+          client:load
+        />
+      </div>
     )
-    })}
-    <ToggleTheme client:load/>
-    </div>
+  }
 </section>
 <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const btn = document.getElementById("toggle-theme");
-      const html = document.documentElement;
-  
-      // Aplicar tema guardado si existe
-      if (localStorage.getItem("theme") === "dark") {
-        html.classList.add("dark");
-      }
-      btn?.addEventListener("click", () => {
-        const isDark = html.classList.toggle("dark");
-        localStorage.setItem("theme", isDark ? "dark" : "light");
-      });
+  document.addEventListener("DOMContentLoaded", () => {
+    const btn = document.getElementById("toggle-theme");
+    const html = document.documentElement;
+
+    // Aplicar tema guardado si existe
+    if (localStorage.getItem("theme") === "dark") {
+      html.classList.add("dark");
+    }
+    btn?.addEventListener("click", () => {
+      const isDark = html.classList.toggle("dark");
+      localStorage.setItem("theme", isDark ? "dark" : "light");
     });
-  </script>
+  });
+</script>
