Company data imported succesfully

--- a/src/components/molecules/Navbar/Navbar.astro
+++ b/src/components/molecules/Navbar/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 import Button from "@/components/atoms/Button/Button";
 import ToggleTheme from "@/components/molecules/ToggleTheme";
-import getPages from "@/hooks/getAllPages";
+import getPages from "@/hooks/useAllPages";
 import { type PageType } from "@/types/pages";
 import Typography from "@/components/atoms/Typography";
 import DinamicIcon from "@/components/atoms/DinamicIcon";
