--- a/src/components/molecules/Footer/Footer.astro
+++ b/src/components/molecules/Footer/Footer.astro
@@ -1,28 +1,23 @@
 ---
-import Button from "@/components/atoms/Button";
-import getPages from "@/hooks/getAllPages";
-import { type PageType } from "@/types/pages";
-const { pages } = await getPages();
+import Typography from "@/components/atoms/Typography";
+import getCompanyData from "@/hooks/useCompanyData";
+import { Image } from "astro:assets";
+
+const { companyData } = await getCompanyData();
+const endPoint = import.meta.env.LOCAL_CMS;
 
 //Aca se iteran todas las paginas creadas en el CMS como links para el NavBar
 ---
 
-<section class="w-full p-5">
-    {
-        pages.length > 0 ? (
-            <div class="w-full flex flex-row justify-around">
-                {pages.map((page: PageType) => {
-                    return (
-                        <Button variant="link" client:load>
-                            <a
-                                href={`/${page.slug === "home" ? "" : page.slug}`}
-                            >
-                                {page.name}
-                            </a>
-                        </Button>
-                    );
-                })}
-            </div>
-        ) : null
-    }
+<section class="w-full p-5 flex gap-2">
+  <Image
+    src={`${endPoint}${companyData.Logo.url}`}
+    alt={companyData.Logo.documentId}
+    width={100}
+    height={100}
+  />
+  <Typography>{companyData.CompanyName}</Typography>
+  <Typography>{companyData.CompanyAddress}</Typography>
+  <Typography>{companyData.CompanyEmail}</Typography>
+  <Typography>{companyData.PhoneNumber}</Typography>
 </section>
