--- a/src/components/molecules/Navbar/Navbar.astro
+++ b/src/components/molecules/Navbar/Navbar.astro
@@ -4,7 +4,6 @@ import ToggleLang from "../ToggleLang/ToggleLang";
 import ToggleTheme from "@/components/molecules/ToggleTheme";
 import getPages from "@/hooks/useAllPages";
 import { type PageType } from "@/types/pages";
-import { LangContextProvider } from "@/context/lang-context";
 import Typography from "@/components/atoms/Typography";
 import DinamicIcon from "@/components/atoms/DinamicIcon";
 const { pages } = await getPages();
@@ -37,23 +36,18 @@ const { pages } = await getPages();
             </a>
           );
         })}
-        <LangContextProvider client:only="react">
-          <ToggleLang client:only="react" />
-        </LangContextProvider>
+        <ToggleLang client:load />
       </div>
     ) : (
       <div class="relative flex py-2">
-        <LangContextProvider client:only="react">
-          <ToggleLang client:only="react" />
-        </LangContextProvider>
-        <Typography className="w-full text-center self-center">
-          No pages found
-        </Typography>
-
         <ToggleTheme
           className="absolute right-4 top-4 -translate-y-1/2"
           client:load
         />
+        <Typography className="w-full text-center self-center">
+          No pages found
+        </Typography>
+        <ToggleLang client:load />
       </div>
     )
   }
