--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import { Container } from "@mui/material";
     <Container
       className="h-[100vh] flex flex-col justify-between px-0 font-main"
     >
-      <Navbar client:load />
+      <Navbar />
       <slot />
       <Footer />
     </Container>
