--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from "@/components/molecules/Footer";
 import Navbar from "@/components/molecules/Navbar";
+import { LangProvider } from "@/context/lang-context";
 import "@/styles/global.css";
 import "@fontsource/kanit";
 import { Container } from "@mui/material";
@@ -19,9 +20,11 @@ import { Container } from "@mui/material";
     <Container
       className="h-[100vh] flex flex-col justify-between px-0 font-main"
     >
-      <Navbar />
-      <slot />
-      <Footer />
+      <LangProvider defaultLang="en" client:load>
+        <Navbar />
+        <slot />
+        <Footer />
+      </LangProvider>
     </Container>
   </body>
 </html>
