--- a/src/components/organism/Layout/Navbar/Navbar.astro
+++ b/src/components/organism/Layout/Navbar/Navbar.astro
@@ -1,14 +1,14 @@
 ---
-// import Button from "@/components/atoms/Button/Button";
-// import { type PageType } from "@/types/pages";
-// import DinamicIcon from "@/components/atoms/DinamicIcon";
+import Button from "@/components/atoms/Button/Button";
+import { type PageType } from "@/types/pages";
+import DinamicIcon from "@/components/atoms/DinamicIcon";
 import ToggleLang from "@/components/molecules/ToggleLang";
 import ToggleTheme from "@/components/molecules/ToggleTheme";
+import NavTitles from "@/components/molecules/NavTitles/NavTitles";
 import usePage from "@/hooks/usePage";
 import Typography from "@/components/atoms/Typography";
-import NavLinks from "@/components/molecules/NavLinks";
 const { fetchAllPages } = await usePage();
-const { pages } = await fetchAllPages();
+const { pages, defaultLocale } = await fetchAllPages();
 //Aca se iteran todas las paginas creadas en el CMS como links para el NavBar
 ---
 
@@ -19,7 +19,12 @@ const { pages } = await fetchAllPages();
     pages.length > 0 ? (
       <div class="w-full flex flex-row justify-between px-5">
         <ToggleTheme client:load />
-        {/* {pages.map((page: PageType) => {
+        {pages.map((page) => {
+          const titles = {
+            name: page.name,
+            defaultLocale: page.defaultLocale,
+            locales: page.locales,
+          };
           return (
             <a href={`/${page.slug === "home" ? "" : page.slug}`}>
               <Button
@@ -32,13 +37,12 @@ const { pages } = await fetchAllPages();
                   className="size-5"
                   weight="bold"
                 />
-                {page.name}
+                <NavTitles titles={titles} client:only="react" />
               </Button>
             </a>
           );
-        })} */}
-        <NavLinks pages={pages} client:only="react" />
-        <ToggleLang client:only="react" />
+        })}
+        <ToggleLang client:only="react" defaultLocale={defaultLocale} />
       </div>
     ) : (
       <div class="relative flex py-2">
