--- a/src/components/organism/Layout/Footer/Footer.astro
+++ b/src/components/organism/Layout/Footer/Footer.astro
@@ -4,18 +4,17 @@ import getCompanyData from "@/hooks/useCompanyData";
 import { Image } from "astro:assets";
 
 const { companyData } = await getCompanyData();
-const endPoint = import.meta.env.LOCAL_CMS;
 
 //Aca se iteran todas las paginas creadas en el CMS como links para el NavBar
 ---
 
 <section class="w-full p-5 flex gap-2">
-  {companyData && (
+  {companyData?.Logo?.url && (
     <Image
-      src={`${endPoint}${companyData.Logo.url}`}
+      src={companyData.Logo.url}
       alt={companyData.Logo.documentId}
-      width={100}
-      height={100}
+      class="w-10 h-10"
+      inferSize
   />
   <Typography>{companyData.CompanyName}</Typography>
   <Typography>{companyData.CompanyAddress}</Typography>
